# Lizard

./: .gitignore  CLAUDE.md  README.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts
assets/shapes/: SOURCES.md  p3-hex-plain.json  p3-lizard-generated.json
docs/: HANDOFF.md
geometry/: pyproject.toml
geometry/scripts/: check_lizard.py  check_pivot_angles.py  extract_lizard.py  find_pivots.py  generate_p3_fish.py  generate_p3_tile.py  smoke_p3.py  verify_lizard.py
geometry/tessera/: __init__.py  __main__.py  api.py  export.py  mapping.py  shapes.py  tessellate.py
patterns/: contrast-tiles.js  solid.js  tile-rainbow.js
src/: App.css  App.tsx  index.css  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  patterns.rs  sidecar.rs  watch.rs
src/components/: Inspector.tsx  ShapeLibrary.tsx
src/components/Viewport/: LedDots.tsx  ShapeOutline.tsx  TileOutlines.tsx  colors.ts  index.tsx
src/core/: api.ts  colorSpace.ts  patternApi.ts  patternRuntime.ts  structure.ts
src/state/: store.ts
