[project]
name = "tessera"
version = "0.0.1"
description = "Tessera geometry sidecar — SVG import, tessellation, LED mapping, 3MF export"
requires-python = ">=3.11,<3.13"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "shapely>=2.0",
    "trimesh>=4.5",
    "svgpathtools>=1.6",
    "svgelements>=1.9",
    "numpy>=1.26,<2.2",
    "networkx>=3.3",
    "lxml>=5.3",
]

[project.optional-dependencies]
cad = [
    "build123d>=0.7",
]
raster = [
    "opencv-python-headless>=4.10",
    "scikit-image>=0.24",
]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "httpx>=0.28",
    "ruff>=0.7",
]

[project.scripts]
tessera-api = "tessera.api:cli_main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["tessera"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B", "SIM"]
ignore = ["E501"]
