[package]
name = "tessera"
version = "0.0.1"
description = "Tessellation & LED mapping workbench"
authors = ["Matt Garrity"]
edition = "2021"

[lib]
name = "tessera_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "tessera"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
log = "0.4"
env_logger = "0.11"
anyhow = "1"
once_cell = "1"
notify = "7"
notify-debouncer-full = "0.4"
